tests/null_as_ref_cast_bad.stderr
tests/null_as_ref_cast_bad.sl:3:15: error: SL2004: type mismatch: cannot cast null to &int
