tests/null_as_ref_cast_bad.sl
// Verifies direct null as reference cast is rejected.
fn main() {
	var x &int = null as &int
	_ = x
}
